--- a/static/modify.html
+++ b/static/modify.html
@@ -145,7 +145,7 @@
       <div class="field">
         <label class="label">비밀번호</label>
         <div class="control">
-          <input id="password" class="input" type="text" value="">
+          <input id="password" class="input" type="password" value="">
         </div>
       </div>
       
