--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
           text-align: center;
       }
       .table {
-          width:800px;
+          width:600px;
           margin:auto;
       }
       /* .clickbox {
@@ -53,7 +53,7 @@
                         articles.sort((a, b) => Number(b.id) - Number(a.id))
                         for (let i = 0; i < articles.length; i++) {
                             let title = articles[i]['title']
-                            let name = articles[i]['name']
+                            let name = articles[i]['nickname']
                             let time = articles[i]['date']
                             let articleId = articles[i]['id']
 
@@ -104,7 +104,7 @@
     <thead>
     <tr>
         <th scope="col">제목</th>
-        <th scope="col">작성자</th>
+        <th scope="col">닉네임</th>
         <th scope="col">작성/수정 날짜</th>
     </tr>
     </thead>
