--- a/static/login.html
+++ b/static/login.html
@@ -35,6 +35,12 @@
       
 </style>
 <script>
+    $(document).ready(function() {
+      if (localStorage.getItem("token")) {
+          alert("이미 로그인이 되어있습니다. 메인 페이지로 이동합니다.");
+          window.location.replace("/index.html");
+    }
+    });
     function sign_in() {
         let nickname = $("#nickname").val();
         let password = $("#password").val();
@@ -50,7 +56,7 @@
             window.location.replace("/index.html");
           },
           error: function (error) {
-            customAlert(error.responseJSON.errorMessage);
+            alert(error.responseJSON.errorMessage);
           },
         });
       }
